--- a/package/crds/sample.template.crossplane.io_mytypes.yaml
+++ b/package/crds/sample.template.crossplane.io_mytypes.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: mytypes.sample.template.crossplane.io
+  name: mytypes.sample.provider-github.crossplane.io
 spec:
-  group: sample.template.crossplane.io
+  group: sample.provider-github.crossplane.io
   names:
     categories:
     - crossplane
     - managed
-    - template
+    - provider-github
     kind: MyType
     listKind: MyTypeList
     plural: mytypes
